samples/errors/equality_type_mismatch.opal
;; Error: `=` is polymorphic but both sides must be the same type
(let main {} (= 1 True))
